# nba_mcp

./: .env.example  .gitignore  .mailmap  CHANGELOG.md  CI_DEBUG_REPORT.md  ENVIRONMENT_SETUP.md  FIXED_ISSUES.md  IMPLEMENTATION_SUMMARY.md  NLQ_INTEGRATION_COMPLETE.md  PHASE1_IMPLEMENTATION_LOG.md  PHASE1_NEXT_STEPS.md  PHASE3_DETAILED_PLAN.md  PHASE3_EFFICIENCY_CHECKLIST.md  PHASE3_FINAL_SUMMARY.md  PHASE3_IMPLEMENTATION_ANALYSIS.md  PHASE3_IMPLEMENTATION_STATUS.md  README.md  SESSION_SUMMARY.md  STANDARDIZATION_PLAN.md  VALIDATION_SUMMARY.md  WEEK1-4_VALIDATION_PLAN.md  WEEK3_PLAN.md  WEEK3_SUMMARY.md  WEEK4_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_nba_mcp.ps1  run_nba_mcp.py  run_validation.py  setup.py  setup_uvenv.ps1  setup_uvenv_dev.ps1  tasks.py  test_api_client.py  test_enhanced_errors.py  test_era_adjusted.py  validate_offline.py  validate_real_data.py
.claude/: settings.local.json
.github/: CONTRIBUTORS.md
api_documentation/: api_documentation.md  awards_data.json  endpoints.json
debug/: ERROR_ANALYSIS.md  debug_mcp_queries.py  inspect_api_client.py  inspect_league_game_log.py
docs/: GOLDEN_QUESTIONS.md  MCP_SETUP_GUIDE.md
examples/: langgraph_ollama_agent copy.py  langgraph_ollama_agent.py  langgraph_ollama_agent_w_tools.py  ollama_pull.py  week4_integration_example.py
grafana/: README.md  nba_mcp_dashboard.json
implementation/: awards_implementation_code.md
nba_mcp/: __init__.py  __main__.py  nba_server.py
nba_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/: explore_awards_api.py  explore_awards_simple.py
schemas/: answer_nba_question.json  compare_players.json  get_date_range_game_log_or_team_game_log.json  get_league_leaders_info.json  get_live_scores.json  get_metrics_info.json  get_player_advanced_stats.json  get_player_career_information.json  get_team_advanced_stats.json  get_team_standings.json  openapi.yaml  play_by_play.json  resolve_nba_entity.json
scripts/: fetch_user_data.py  user_data_results.json
tests/: FIXED_TESTS.py  README.md  check_pbp_columns.py  comprehensive_nba_mcp_tests.py  debug_matchup_format.py  demo_awards_quick.py  demo_awards_usage.py  stress_test_nba_mcp.py  test_advanced_metrics_comprehensive.py  test_advanced_metrics_pytest.py  test_awards_client.py  test_awards_enrichment.py  test_awards_integration.py  test_awards_loader.py  test_cache_and_rate_limit.py  test_comprehensive_name_variations.py  test_data_groupings.py  test_date_handling.py  test_date_parser_comprehensive.py  test_enrichment_system.py  test_extended_awards.py  test_fetch_player_games.py  test_filter_pushdown_comprehensive.py  (+28 more)
(+99 files in other folders)
