[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-mcp"
version = "0.1.0"
description = "NBA MCP Server"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "fastmcp>=0.1.0",
    "pandas",
]

[project.scripts]
nba-mcp = "nba_mcp.nba_server:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true