[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-mcp"
version = "0.2.0"
description = "NBA MCP Server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pandas",
    "nba_api>=1.2.1",
]

[project.scripts]
nba-mcp = "nba_mcp.nba_server:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true