[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-mcp"
version = "0.5.0"
description = "NBA MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.2.0",
  "httpx>=0.28.1",
  "nba_api>=1.9.0",
  "pandas>=2.2.3",
  "pydantic>=2.11.3",
  "python-dotenv>=1.1.0",
  "python-dateutil>=2.8.0",
  "langchain-mcp-adapters>=0.0.9",
  "langchain-ollama>=0.3.2",
  "langgraph>=0.3.31",
  "ollama>=0.4.8",
  "jupyter>=1.1.1",
  "streamlit>=1.37.1",
  "rich>=10.14.0,<14",
  "mss>=6.3.0",
  "tenacity>=8.2.0",
  "redis>=5.0.0",
  "prometheus-client>=0.19.0",
  "opentelemetry-api>=1.22.0",
  "tabulate>=0.9.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "duckdb==1.4.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "invoke>=2.2.0",
]

[project.scripts]
nba-mcp = "nba_mcp.nba_server:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# Skip test_priority1_tools.py - it's a standalone script, not a pytest suite
# Run it manually: python tests/test_priority1_tools.py
testpaths = ["tests"]
addopts = "--ignore=tests/test_priority1_tools.py"
asyncio_default_fixture_loop_scope = "function"
